policy-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: policy-namespace
  labels:
    project: policy-namespace
